Use Project Panama foreign linker.